<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mad"
    tools:context=".home">

    <Button
        android:id="@+id/upButton"
        android:layout_width="81dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/upButton"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pImg" />

    <ImageView
        android:id="@+id/covidImage"
        android:layout_width="80dp"
        android:layout_height="69dp"
        android:layout_marginTop="392dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/appoimetslogo1" />

    <Button
        android:background="@android:color/holo_blue_light"
        android:id="@+id/covidButton"
        android:layout_width="231dp"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:text="@string/covidButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toEndOf="@+id/covidImage"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pcrButton"
        android:layout_width="235dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/pcrButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toEndOf="@+id/pcrImg"
        app:layout_constraintTop_toBottomOf="@+id/covidButton" />

    <Button
        android:id="@+id/signoutButton"
        android:layout_width="81dp"
        android:layout_height="28dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/signoutButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pcrButton"
        app:layout_constraintVertical_bias="0.661" />

    <Button
        android:id="@+id/reviewButton"
        android:layout_width="196dp"
        android:layout_height="61dp"
        android:layout_marginBottom="28dp"
        android:text="@string/reviewButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signoutButton"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reprtViewButton"
        android:layout_width="197dp"
        android:layout_height="55dp"
        android:layout_marginBottom="4dp"
        android:text="@string/reprtViewButton"
        app:layout_constraintBottom_toTopOf="@+id/reviewButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/pImg"
        android:layout_width="128dp"
        android:layout_height="95dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pfphoto" />

    <ImageView
        android:id="@+id/pcrImg"
        android:layout_width="86dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/covidImage"
        app:srcCompat="@drawable/appointslogo" />

</androidx.constraintlayout.widget.ConstraintLayout>